k8s/rotoreader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rotoreader
  namespace: sportsstack
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rotoreader
  template:
    metadata:
      labels:
        app: rotoreader
    spec:
      containers:
        - name: api
          image: maxo5499/sportsstack-rotoreader:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: rotoreader
  namespace: sportsstack
spec:
  type: ClusterIP
  selector:
    app: rotoreader
  ports:
    - port: 8081
      targetPort: 8081
      name: http
