k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sportsstack
  namespace: sportsstack
spec:
  ingressClassName: nginx
  rules:
    - host: api-gateway.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8088
    - host: rotoreader.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rotoreader
                port:
                  number: 8081
